# sw_stitch

./: CMakeLists.txt  README.md
config/: extrinsic.yml  intrinsic.yml
config/051/: calib.yml  stitch.yml
config/051/done/: back.txt  calib.yml  front.txt  intrinsic.yml  left.txt  right.txt  stitch.yml
config/123/: back.txt  calib.yml  front.txt  intrinsic.yml  left.txt  right.txt  stitch.yml
config/552/: back.txt  calib.yml  front.txt  intrinsic.yml  left.txt  right.txt
config/5555/: back.txt  calib.yml  front.txt  intrinsic.yml  left.txt  right.txt
config/752/: back.txt  calib.yml  front.txt  intrinsic.yml  intrinsic_0.yml  left.txt  right.txt  stitch.yml
config/apa/: back.txt  calib.yml  intrinsic.yml  left.txt  right.txt  stitch.yml
config/apa1/: front.txt  left.txt  right.txt  stitch.yml
config/circle/: README.md
config/circle/1.0-16.0/: worldpoint.txt
config/circle/1.0-16.0/back/: circlepoint.txt
config/circle/1.0-16.0/left/: circlepoint.txt
config/sim/: 3_0.txt  back.txt  calib.yml  front.txt  left.txt  right.txt  stitch.yml
config/sim2/: back.txt  calib.yml  front.txt  left.txt  right.txt  stitch.yml
config/sim3/: back.txt  calib.yml  front.txt  intrinsic.yml  left.txt  right.txt  stitch.yml
include/: Calibrate.h  CameraPos.h  Composition.h  FindCircle.h  FindPoints.h  HomographyCost.h  IOConfig.h  OnlineCalibrate.h  OnlineCalibrateCost.h  ParkingMapStitch.h  PiecewiseWarper.h  WorldPlane.h  filedir.h
lib/x86_64/: libsw_stitch.so.1.0
sample/: CMakeLists.txt  createMask.cpp  genChessboard.cpp  genExtrinsicPlot.cpp  generateCameraPos.cpp  getMousePosition.cpp  main.cpp  sv.cpp  testCalib.cpp  testFindCircle.cpp  testFindPoints.cpp  testIOConfig.cpp  testOnlineCalib.cpp  testRun.cpp  testStitch.cpp  testUndistort.cpp
source/: Calibrate.cpp  Composition.cpp  FindPoints.cpp  HomographyCost.cpp  IOConfig.cpp  OnlineCalibrate.cpp  OnlineCalibrateCost.cpp  ParkingMapStitch.cpp  PiecewiseWarper.cpp  WorldPlane.cpp  filedir.cpp
